\name{NEWS}
\title{News for Package \pkg{WRS2}}
\encoding{UTF-8}

\section{Changes in Version 1.1-6}{
  \itemize{
    \item duplicated top-level assignments removed.
    }
}


\section{Changes in Version 1.1-5}{
  \itemize{
    \item mc2d package removed from the dependencies.
    }
}


\section{Changes in Version 1.1-4}{
  \itemize{
    \item Some character escapes fixed in help files.
    }
}


\section{Changes in Version 1.1-3}{
  \itemize{
    \item method argument added in lincon().
    \item For some selected functions alpha is returned.
    }
}

\section{Changes in Version 1.1-2}{
  \itemize{
    \item Outputs from wmcpAKP() and dep.effect() functions get additional classes named after these functions (thanks to Indrajeet Patil).
    \item All functions now feature dots (…) argument (thanks to Indrajeet Patil).
    \item trimcibt() added for bootstrap-t method for one-sample test.
    }
}

\section{Changes in Version 1.1-1}{
  \itemize{
    \item wmcpAKP() added for dependent samples ANOVA effect size.
    \item Bug in post hoc function mcp2atm() and mcp2a() fixed.
    }
}

\section{Changes in Version 1.1-0}{
  \itemize{
    \item Bootstrap CI for effect size in t1way() added.
    \item Bootstrap CI for akp.effect() added.
    \item alpha argument in lincon() and rmmcp() added.
    \item Bootstrap CI for pbcor() and wincor() added.
    \item dep.effect() function added for effect size computations (incl. CI) in paired samples settings.
    \item Seed issue in t1waybt() fixed.
    \item Labeling in in sppba, sppbi, and sppbb fixed.
    }
}


\section{Changes in Version 1.0-0}{
  \itemize{
    \item Vignette updated.
    \item Effect size added to yuen().
    \item Hochberg p-value correction added to lincon().
    \item Alpha level argument added in onesampb().
    }
}

\section{Changes in Version 0.10-0}{
  \itemize{
    \item Vignette added.
    }
}


\section{Changes in Version 0.9-7}{
  \itemize{
    \item \code{onesampb} added.