@@ -1,8 +1,8 @@
 Package: WRS2
 Type: Package
 Title: A Collection of Robust Statistical Methods
-Version: 1.1-6
-Date: 2024-03-14
+Version: 1.1-7
+Date: 2025-05-21
 Authors@R: c(person(given="Patrick", family="Mair", email="mair@fas.harvard.edu", role=c("cre","aut")),
              person(given="Rand", family="Wilcox", email="rwilcox@usc.edu", role=c("aut")),
              person(given="Indrajeet", family="Patil", email="patilindrajeet.science@gmail.com", role=c("ctb")))
@@ -16,11 +16,11 @@ VignetteBuilder: knitr
 LazyData: yes
 LazyLoad: yes
 ByteCompile: yes
-NeedsCompilation: yes
-Packaged: 2024-03-14 15:39:14 UTC; patrick
+NeedsCompilation: no
+Packaged: 2025-05-21 20:19:15 UTC; patrick
 Author: Patrick Mair [cre, aut],
   Rand Wilcox [aut],
   Indrajeet Patil [ctb]
 Maintainer: Patrick Mair <mair@fas.harvard.edu>
 Repository: CRAN
-Date/Publication: 2024-03-15 08:36:23 UTC
+Date/Publication: 2025-05-22 05:25:05 UTC
